fix: vertical align chart shared tooltip marker; delete unnecessary CSS rukes

--- a/styles/charts/_theme.scss
+++ b/styles/charts/_theme.scss
@@ -6,10 +6,6 @@ $chart-inactive: $disabled-border-color !default;
 $chart-major-lines: darken($base, 30%) !default;
 $chart-minor-lines: darken($base, 20%) !default;
 
-$chart-font-size-s: 11px !default;
-$chart-font-size-m: 12px !default;
-$chart-font-size-l: 16px !default;
-
 $chart-area-opacity: .8 !default;
 
 $chart-crosshair-shared-tooltip-color: $normal-text-color !default;
@@ -18,18 +14,6 @@ $chart-crosshair-shared-tooltip-border: rgba(0, 0, 0, .08) !default;
 
 @include exports('charts/theme') {
     // Exported variables
-    .k-var--chart-font-s {
-        font-size: $chart-font-size-s;
-    }
-
-    .k-var--chart-font-m {
-        font-size: $chart-font-size-m;
-    }
-
-    .k-var--chart-font-l {
-        font-size: $chart-font-size-l;
-    }
-
     .k-var--chart-inactive {
         background-color: $chart-inactive;
     }
